--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>10... 10:15</title>
+    <style>
+      body {
+        background-color: black;
+        text-align: center;
+      }
+      p#timestamp {
+        font-size: 100px;
+      }
+      p {
+        color: white
+      }
+    </style>
   </head>
   <body>
     <p id="timestamp">Timestamp</p>
-    <p>v3</p>
+    <input type="range" min="0" max="1" value="0.2" step="0.005" id="volume-slider">
     <script src="script.js"></script>
   </body>
-  <style>
-    body {
-      background-color: black
-    }
-    p#timestamp {
-      font-size: 100px;
-    }
-    p {
-      text-align: center;
-      color: white
-    }
-  </style>
 </html>
